--- a/services.html
+++ b/services.html
@@ -164,7 +164,7 @@
   <!-- HEADER -->
   <div class="header">
     <div class="container">
-      <div class="badge">⚡ Shopify Services <span>•</span> Premium + Fast</div>
+      <div class="badge"> Shopify Services <span>•</span> Premium + Fast</div>
       <h1>Services</h1>
       <p class="sub">
         I design, customize and optimize Shopify stores with a premium look — clean UI, fast speed and conversion-focused layout.
