--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
     <div class="container navinner">
       <a class="logo" href="#top"><span class="dot"></span> AnkitUX</a>
       <div class="menu">
-        <a href="#services">Services</a>
+        <a href="services.html">Services</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#pricing">Pricing</a>
         <a href="#contact">Contact</a>
       </div>
-      <a class="btn btnPrimary" href="#contact">Hire Me</a>
+      <a class="btn btnPrimary" href="contact.html">Contact Now</a>
     </div>
   </div>
 
