--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+f<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
@@ -55,7 +55,14 @@
       font-size:14px;opacity:.84;transition:.2s;
       padding:8px 10px;border-radius:12px
     }
-    .menu a:hover{opacity:1;background: rgba(0,229,255,.08)}
+    .menu a:hover{opacity:1;background: rgba(0,229,255,.08)}.menu a.active{
+  opacity: 1;
+  color: var(--primary);
+  background: rgba(0,229,255,.12);
+  border: 1px solid rgba(0,229,255,.25);
+  box-shadow: 0 0 20px rgba(0,229,255,.18);
+}
+
     .btn{
       border:1px solid rgba(0,229,255,.22);
       background: rgba(0,229,255,.08);
@@ -228,9 +235,9 @@
       <a class="logo" href="#top"><span class="dot"></span> AnkitUX</a>
       <div class="menu">
         <a href="services.html">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#pricing">Pricing</a>
-        <a href="#contact">Contact</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
       </div>
       <a class="btn btnPrimary" href="contact.html">Contact Now</a>
     </div>
@@ -249,8 +256,8 @@
         </p>
 
         <div class="cta">
-          <a class="btn btnPrimary" href="https://wa.me/91XXXXXXXXXX" target="_blank">WhatsApp</a>
-          <a class="btn" href="#portfolio">View Work</a>
+          <a class="btn btnPrimary" href="https://wa.me/918570924634" target="_blank">WhatsApp</a>
+          <a class="btn" href="portfolio.html">View Work</a>
         </div>
       </div>
 
