--- a/index.html
+++ b/index.html
@@ -234,14 +234,12 @@ f<!doctype html>
     <div class="container navinner">
       <a class="logo" href="#top"><span class="dot"></span> AnkitUX</a>
       <div class="menu">
-        <a href="services.html">Services</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="pricing.html">Pricing</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <a class="btn btnPrimary" href="contact.html">Contact Now</a>
-    </div>
-  </div>
+  <a class="active" href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="pricing.html">Pricing</a>
+  <a href="contact.html">Contact</a>
+</div>
 
   <!-- HERO -->
   <div id="top" class="hero">
