--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ f<!doctype html>
   <!-- NAV -->
   <div class="nav">
     <div class="container navinner">
-      <a class="logo" href="#top"><span class="dot"></span> AnkitUX</a>
+      <a class="logo" href="index.html"><span class="dot"></span> AnkitUX</a>
       <div class="menu">
   <a class="active" href="index.html">Home</a>
   <a href="services.html">Services</a>
