--- a/index.html
+++ b/index.html
@@ -241,39 +241,41 @@ f<!doctype html>
   <a href="contact.html">Contact</a>
 </div>
 
-  <!-- HERO -->
-  <div id="top" class="hero">
-    <div class="container heroGrid">
+ <!-- HERO -->
+<div id="top" class="hero">
+  <div class="container heroGrid">
 
-      <div>
-        <div class="badge">⚡ Premium Shopify Store Designer <span>•</span> India</div>
-        <h1>Classy Shopify Stores that convert.</h1>
-        <p class="sub">
-          I design modern, fast and premium Shopify stores for brands.
-          From theme setup to full redesign, I make your store look high-end and sell better.
-        </p>
+    <div>
+      <div class="badge">⚡ Premium Shopify Store Designer • India</div>
+      <h1>Classy Shopify Stores that convert.</h1>
+      <p class="sub">
+        I design modern, fast and premium Shopify stores for brands. From
+        theme setup to full redesign, I make your store look high-end and
+        sell better.
+      </p>
 
-        <div class="cta">
-          <a class="btn btnPrimary" href="https://wa.me/918570924634" target="_blank">WhatsApp</a>
-          <a class="btn" href="portfolio.html">View Work</a>
-        </div>
+      <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:18px">
+        <a class="btn btnPrimary" href="https://wa.me/8570924634" target="_blank">WhatsApp</a>
+        <a class="btn" href="portfolio.html">View Work</a>
       </div>
-
-      <div class="heroCard">
-        <b style="position:relative;z-index:1;font-size:16px">What you get</b>
-        <p style="position:relative;z-index:1;margin:10px 0 0;color:var(--muted);line-height:1.7">
-          Premium UI, clean layout, trust design and smooth checkout experience.
-        </p>
-
-        <div class="statGrid">
-          <div class="stat"><b>Fast</b><small>Speed optimized</small></div>
-          <div class="stat"><b>Premium</b><small>Luxury look</small></div>
-          <div class="stat"><b>Clean</b><small>No clutter</small></div>
-        </div>
-      </div>
-
     </div>
+
+    <div class="card" style="padding:18px">
+      <h2 style="margin:0 0 8px;font-size:18px">What you get</h2>
+      <p style="margin:0;color:var(--muted);line-height:1.7">
+        Premium UI, clean layout, trust design and smooth checkout experience.
+      </p>
+
+      <div class="grid3" style="margin-top:14px">
+        <div class="mini"><b>Fast</b><div style="color:var(--muted);font-size:13px">Speed optimized</div></div>
+        <div class="mini"><b>Premium</b><div style="color:var(--muted);font-size:13px">Luxury look</div></div>
+        <div class="mini"><b>Clean</b><div style="color:var(--muted);font-size:13px">No clutter</div></div>
+      </div>
+    </div>
+
   </div>
+</div>
+
 
   <!-- SERVICES -->
   <section id="services">
