--- a/index.html
+++ b/index.html
@@ -249,9 +249,8 @@ f<!doctype html>
       <div class="badge">⚡ Premium Shopify Store Designer • India</div>
       <h1>Classy Shopify Stores that convert.</h1>
       <p class="sub">
-        I design modern, fast and premium Shopify stores for brands. From
-        theme setup to full redesign, I make your store look high-end and
-        sell better.
+        I design modern, fast and premium Shopify stores for brands. From theme setup to full redesign,
+        I make your store look high-end and sell better.
       </p>
 
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:18px">
@@ -275,6 +274,7 @@ f<!doctype html>
 
   </div>
 </div>
+
 
 
   <!-- SERVICES -->
