--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ f<!doctype html>
                   radial-gradient(900px 600px at 85% 30%, rgba(0,184,255,.08), transparent 55%),
                   var(--bg);
       color:var(--text);
+      overflow-x:hidden;
     }
 
     a{color:inherit;text-decoration:none}
