--- a/index.html
+++ b/index.html
@@ -79,7 +79,25 @@ f<!doctype html>
 
     /* HERO */
     .hero{padding:72px 0 34px}
-    .heroGrid{display:grid;grid-template-columns: 1.15fr .85fr;gap:22px;align-items:center}
+    .heroGrid{
+  display:grid;
+  grid-template-columns: 1.15fr .85fr;
+  gap:22px;
+  align-items:center;
+  width:100%;
+}
+
+/* ✅ MAIN FIX: prevent hero from going too wide */
+.heroGrid > div{
+  min-width: 0;
+}
+
+@media (max-width: 1100px){
+  .heroGrid{
+    grid-template-columns: 1fr;
+  }
+}
+
     .badge{
       display:inline-flex;gap:10px;align-items:center;
       padding:9px 12px;border-radius:999px;
@@ -140,6 +158,8 @@ f<!doctype html>
       border-radius: var(--radius);
       padding:18px;
       transition:.2s;
+      max-width: 100%;
+
     }
     .card:hover{transform:translateY(-2px);box-shadow: var(--shadow)}
     .icon{
